--- a/styles/menu.css
+++ b/styles/menu.css
@@ -587,6 +587,10 @@ body {
     animation: loading 0.75s ease infinite;
 }
 
+.hideEl{
+    pointer-events: none;
+}
+
 @keyframes loading {
     from {
         transform: rotate(0turn);
@@ -596,3 +600,4 @@ body {
         transform: rotate(1turn);
     }
 }
+
